Do not specify MaxPermSize
In Boron we only support Java 8, which does not need
this deprecated option. Remove it.

Change-Id: Iad00670c2298ac105fa078d26e6520bd0bdf832b
Signed-off-by: Robert Varga <rovarga@cisco.com>